--- a/FeinesCamp/View/AcabarFeinaPopup.xaml
+++ b/FeinesCamp/View/AcabarFeinaPopup.xaml
@@ -1,13 +1,78 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:PopupPage  xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
-                  xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="FeinesCamp.View.AcabarFeinaPopup">
+                  xmlns="http://xamarin.com/schemas/2014/forms"
+                  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                  xmlns:viewmodel="clr-namespace:FeinesCamp.ViewModel" xmlns:abstractions="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin" xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
+                  x:Class="FeinesCamp.View.AcabarFeinaPopup">
+
+    <pages:PopupPage.BindingContext>
+        <viewmodel:AcabarFeinaPopupViewModel />
+    </pages:PopupPage.BindingContext>
+
+    <pages:PopupPage.Animation>
+        <animations:ScaleAnimation
+            PositionIn="Center"
+            PositionOut="Center"
+            ScaleIn="0.5"
+            ScaleOut="1.2"
+            DurationIn="300"
+            DurationOut="200"
+            EasingIn="SinOut"
+            EasingOut="SinIn"
+            HasBackgroundAnimation="True">
+
+        </animations:ScaleAnimation>
+    </pages:PopupPage.Animation>
     <StackLayout Margin="12"
                 Padding="24"
-                Spacing="24"
                 HorizontalOptions="Center"
-                VerticalOptions="Center">
-       <StackLayout>
-           <Label Text="Hola" />
-       </StackLayout>
-   </StackLayout>
+                VerticalOptions="Center"
+                 BackgroundColor="White" >
+
+        <Grid ColumnSpacing="10" Padding="10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="80" />
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                          <abstractions:CircleImage Source="{Binding Tarea.Image}"
+                                   BorderColor="Aqua"
+                                   BorderThickness="3"
+                                   HorizontalOptions="Center"
+                                   VerticalOptions="Center"
+                                   WidthRequest="70"
+                                   HeightRequest="70"
+                                   Aspect="AspectFill"
+                                   />
+                            <StackLayout Grid.Column="1"
+                                         VerticalOptions="Center">
+                                <Label Text="{Binding Tarea.Name}" />
+                                <Label Text="{Binding Tarea.ClientName}" />
+                                <Label Text="{Binding Tarea.Land.Name}" />
+                            </StackLayout>
+                        </Grid>
+
+             <Editor Placeholder="Material" Grid.Row="4" Grid.Column="1"
+                          BindingContext="{Binding Tarea.Material}"/>
+
+             <Editor Placeholder="Comentaris" Grid.Row="5"  Grid.Column="1"
+                         BindingContext="{Binding Tarea.CommentPro}"
+                         />
+                
+             <Entry Placeholder="Temps" Grid.Row="6"  Grid.Column="1"
+                         BindingContext="{Binding Tarea.Time, Mode=TwoWay}"
+                            Keyboard="Numeric"/>
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Column="1" Text="Acabar" />
+
+           <Button Grid.Column="0" Text="Cancelar" Clicked="Cancelar_Clicked"/>
+
+        </Grid>
+      
+    </StackLayout>
 </pages:PopupPage>
