--- a/FeinesCamp/View/ClientDetailsPage.xaml
+++ b/FeinesCamp/View/ClientDetailsPage.xaml
@@ -1,5 +1,23 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="FeinesCamp.View.ClientDetailsPage">
-    <ContentPage.Content>
-    </ContentPage.Content>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="FeinesCamp.View.ClientDetailsPage">
+
+    <ScrollView>
+        <StackLayout>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="100"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+            </Grid>
+            <BoxView BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand"
+                           HeightRequest="100" Grid.ColumnSpan="3"/>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
