--- a/FeinesCamp/View/AcabarFeinaPopup.xaml
+++ b/FeinesCamp/View/AcabarFeinaPopup.xaml
@@ -2,12 +2,9 @@
 <pages:PopupPage  xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
                   xmlns="http://xamarin.com/schemas/2014/forms"
                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                  xmlns:viewmodel="clr-namespace:FeinesCamp.ViewModel" xmlns:abstractions="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin" xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
+                  xmlns:abstractions="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
+                  xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
                   x:Class="FeinesCamp.View.AcabarFeinaPopup">
-
-    <pages:PopupPage.BindingContext>
-        <viewmodel:AcabarFeinaPopupViewModel />
-    </pages:PopupPage.BindingContext>
 
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation
@@ -52,14 +49,14 @@
                         </Grid>
 
              <Editor Placeholder="Material" Grid.Row="4" Grid.Column="1"
-                          BindingContext="{Binding Tarea.Material}"/>
+                          BindingContext="{Binding Material}"/>
 
              <Editor Placeholder="Comentaris" Grid.Row="5"  Grid.Column="1"
-                         BindingContext="{Binding Tarea.CommentPro}"
+                         BindingContext="{Binding Comentari}"
                          />
                 
              <Entry Placeholder="Temps" Grid.Row="6"  Grid.Column="1"
-                         BindingContext="{Binding Tarea.Time, Mode=TwoWay}"
+                         BindingContext="{Binding Time}"
                             Keyboard="Numeric"/>
 
         <Grid>
@@ -68,7 +65,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="1" Text="Acabar" />
+            <Button Grid.Column="1" Text="Acabar" Command="{Binding SaveTarea}"/>
 
            <Button Grid.Column="0" Text="Cancelar" Clicked="Cancelar_Clicked"/>
 
